[gd_scene load_steps=2 format=3 uid="uid://ye2e1gq5nqx7"]

[ext_resource type="Script" path="res://addons/gfred2/dialogs/open_mission_dialog.gd" id="1_k3m5p"]

[node name="OpenMissionDialog" type="Window"]
title = "Open Mission"
size = Vector2i(800, 500)
script = ExtResource("1_k3m5p")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
text = "Available Missions:"

[node name="FileList" type="ItemList" parent="MarginContainer/VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
layout_mode = 2
text = "Preview:"

[node name="Preview" type="TextEdit" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="OpenButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "Open"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"
